fix logo centering issue on smaller screens

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -631,8 +631,8 @@ button:focus {
 	}
 
 	.main-logo {
-		margin-left: -15% !important;	
-		margin-top: -10%	 !important;
+		margin-left: -23%;
+		margin-right: 0;
 		max-width: 80% !important;
 	}
 
